<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_create_employe_message"
        style="@style/error_message"
        android:text="@string/create_employe_message" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/txt_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/txt_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minWidth="150dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:text="@string/operation" />

            <CheckBox
                android:id="@+id/operation_type"
                style="@style/operation_style" />
        </TableRow>
    </TableLayout>

</LinearLayout>